--- a/index.html
+++ b/index.html
@@ -61,11 +61,15 @@
       cursor: pointer;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      text-align: center;
+      align-items: flex-start;
+      text-align: left;
       gap: 1rem;
+      max-width: 260px;
     }
     .feature-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
       justify-items: center;
     }
     .card-feature:hover {
@@ -96,6 +100,7 @@
       margin-bottom: 0.7rem;
       max-width: 420px;
     }
+    h1 { margin: 0; }
     .footer-bg {
       background: linear-gradient(90deg, #e9faee 60%, #f7fdf8 100%);
       border-top: 1.5px solid #e6f4ea;
@@ -106,8 +111,8 @@
     @media (max-width: 640px) {
       .hero-content { flex-direction: column; align-items: center; text-align: center; }
       .hero-illustration { margin-top: 2rem; display: flex; justify-content: center; }
-    .hero-illustration img { max-width: 100%; height: auto; border-radius: 1rem; box-shadow: 0 4px 20px rgba(0,0,0,0.08); }
     }
+    .hero-illustration img { max-width: 100%; height: auto; border-radius: 1rem; box-shadow: 0 4px 20px rgba(0,0,0,0.08); }
   </style>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -126,7 +131,7 @@
   </header>
   <main class="flex-1 w-full max-w-7xl mx-auto px-6">
     <section class="w-full flex flex-col-reverse md:flex-row items-center md:justify-between pt-8 md:pt-16 gap-8 md:gap-12 fade-in fade-in-2 hero-content">
-      <div class="max-w-xl flex flex-col gap-6 md:gap-8">
+      <div class="max-w-xl flex flex-col gap-6 md:gap-8 text-center md:text-left">
         <h1 class="text-4xl sm:text-5xl font-semibold tracking-tight">Never Lose a Brilliant Answer Again</h1>
         <p class="text-lg md:text-xl text-gray-700">Unlock perfect recall—capture, organise and retrieve your best AI insights forever.</p>
         <div class="flex flex-col sm:flex-row items-start sm:items-center gap-3 mt-2">
@@ -138,7 +143,7 @@
         </div>
       </div>
       <div class="w-full flex justify-center items-center md:w-auto fade-in fade-in-3 hero-illustration">
-        <img src="screenshots/screenshot1.png" alt="The Memory Mate screenshot" class="rounded-xl shadow-lg w-full max-w-md mx-auto">
+        <img src="screenshots/screenshot1.png" alt="The Memory Mate screenshot" class="rounded-xl shadow-lg w-full max-w-md mx-auto md:mx-0">
       </div>
     </section>
     <div class="section-divider"></div>
@@ -171,7 +176,7 @@
     <div class="section-divider"></div>
     <section id="features" class="w-full py-1 fade-in fade-in-3">
       <h2 class="text-2xl sm:text-3xl font-semibold tracking-tight mb-8">Why You’ll Love The Memory Mate</h2>
-      <div class="grid feature-grid gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-5">
+      <div class="feature-grid">
         <div class="card-feature fade-in fade-in-4">
           <div class="icon-circle"><svg width="28" height="28" viewBox="0 0 24 24"><rect x="3" y="5" width="18" height="14" rx="3" fill="#4CAF50" opacity="0.13"></rect><path d="M5 5v14h14V5H5zm7 1v6m0 0l3-3m-3 3l-3-3" stroke="#4CAF50" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"></path></svg></div>
           <h4 class="font-semibold text-lg mb-1">One‑Click Capture</h4>
@@ -255,7 +260,8 @@
     <section class="w-full py-10 flex flex-col items-center justify-center fade-in fade-in-5">
       <h2 class="text-3xl sm:text-4xl font-semibold tracking-tight mb-4 text-center">Supercharge Your Memory — Free Forever</h2>
       <a href="#" class="btn-primary text-lg shadow-lg mt-2 fade-in fade-in-6">Add to Chrome Now</a>
-      <div class="mt-3 text-gray-600 text-base">Upgrade to Premium anytime. No credit card required.</div>
+      <div class="mt-3 text-gray-600 text-base text-center">Upgrade to Premium anytime. No credit card required.</div>
+      <div class="mt-1 text-gray-700 text-base text-center">Join <span class="font-semibold text-[#4CAF50]">1,000+</span> users already building a smarter memory.</div>
       <span class="mt-3 inline-flex items-center gap-1 text-[#45a049]">
         <svg width="18" height="18" viewBox="0 0 20 20" fill="none"><circle cx="10" cy="10" r="10" fill="#4CAF50"></circle><text x="5.6" y="15" font-size="13" fill="#fff" font-family="Inter,sans-serif" font-weight="bold">★</text></svg>
         4.9 on Chrome Web Store
