Improve landing page copy and CTA

--- a/index.html
+++ b/index.html
@@ -121,9 +121,10 @@
   <main class="container">
     <section class="hero">
       <div class="hero-text">
-        <h1>Every Genius Answer, One Click Away</h1>
-        <p>The Memory Mate saves, organises and surfaces your favourite AI replies so you never lose a spark of insight.</p>
+        <h1>Turn Every AI Chat into Actionable Knowledge</h1>
+        <p>Stop letting brilliant answers vanish. Memory Mate captures, organises and resurfaces them so you can work smarter, not harder.</p>
         <a href="#" class="btn-primary">Add to Chrome — It's Free</a>
+        <p style="margin-top:1rem;color:#555;">Upgrade to Pro whenever you're ready.</p>
       </div>
       <div class="hero-img">
         <img id="hero-screenshot" src="screenshots/screenshot1.png" alt="Extension screenshot">
@@ -177,6 +178,11 @@
         <img src="screenshots/screenshot2.png" alt="Organising answers">
         <img src="screenshots/screenshot3.png" alt="Search and projects overview">
       </div>
+      <div style="margin-top:3rem;text-align:center;">
+        <h3 style="font-weight:600;margin-bottom:1rem;">Coming Soon</h3>
+        <p style="max-width:640px;margin:0 auto;color:#333;">Export directly to Notion, Obsidian or OneNote, tag your clips for lightning search, inject saved answers back into any prompt and tap into a built-in retrieval assistant.</p>
+        <p style="margin-top:1.5rem;"><a href="#" class="btn-primary">Unlock Pro Features</a></p>
+      </div>
     </section>
     <section id="testimonials" class="section" style="padding-top:0;">
       <h2 style="font-size:1.8rem;font-weight:600;text-align:center;">Real Users, Real Results</h2>
@@ -205,9 +211,9 @@
       </div>
     </section>
     <section class="section" id="download" style="text-align:center;padding-top:0;">
-      <h2 style="font-size:2rem;font-weight:600;margin-bottom:1rem;">Supercharge Your Memory — Free Forever</h2>
+      <h2 style="font-size:2rem;font-weight:600;margin-bottom:1rem;">Ready to Never Lose Another Insight?</h2>
       <a href="#" class="btn-primary" style="font-size:1.1rem;">Add to Chrome Now</a>
-      <p style="margin-top:1rem;color:#555;">Upgrade to Premium anytime. No credit card required.</p>
+      <p style="margin-top:1rem;color:#555;">Start free and unlock Pro power whenever you need it.</p>
     </section>
   </main>
   <footer>
