--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Memory Mate – Save Your Best AI Answers Instantly</title>
+  <title>The Memory Mate – Your AI Memory for 10x Productivity</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
   <style>
@@ -121,8 +121,9 @@
   <main class="container">
     <section class="hero">
       <div class="hero-text">
-        <h1>Turn Every AI Chat into Actionable Knowledge</h1>
-        <p>Stop letting brilliant answers vanish. Memory Mate captures, organises and resurfaces them so you can work smarter, not harder.</p>
+        <h1>Your Memory Mate for Every AI Chat</h1>
+        <p>Capture genius responses from ChatGPT, Gemini, Claude and Perplexity with a single click. Organise them into projects and rediscover any insight instantly.</p>
+        <p style="margin-bottom:1.2rem;">Enjoy a 10x productivity surge today—and as our roadmap unfolds you'll be 100x ahead of anyone still copy‑pasting.</p>
         <a href="#" class="btn-primary">Add to Chrome — It's Free</a>
         <p style="margin-top:1rem;color:#555;">Upgrade to Pro whenever you're ready.</p>
       </div>
@@ -179,8 +180,8 @@
         <img src="screenshots/screenshot3.png" alt="Search and projects overview">
       </div>
       <div style="margin-top:3rem;text-align:center;">
-        <h3 style="font-weight:600;margin-bottom:1rem;">Coming Soon</h3>
-        <p style="max-width:640px;margin:0 auto;color:#333;">Export directly to Notion, Obsidian or OneNote, tag your clips for lightning search, inject saved answers back into any prompt and tap into a built-in retrieval assistant.</p>
+        <h3 style="font-weight:600;margin-bottom:1rem;">Roadmap to 100x Productivity</h3>
+        <p style="max-width:640px;margin:0 auto;color:#333;">Soon you'll push projects straight to Notion, Obsidian or OneNote, tag every answer for instant recall, inject saved snippets directly into new prompts and rely on a built‑in retrieval assistant to surface the perfect quote on demand.</p>
         <p style="margin-top:1.5rem;"><a href="#" class="btn-primary">Unlock Pro Features</a></p>
       </div>
     </section>
@@ -211,9 +212,9 @@
       </div>
     </section>
     <section class="section" id="download" style="text-align:center;padding-top:0;">
-      <h2 style="font-size:2rem;font-weight:600;margin-bottom:1rem;">Ready to Never Lose Another Insight?</h2>
+      <h2 style="font-size:2rem;font-weight:600;margin-bottom:1rem;">Ready for a 10x Boost?</h2>
       <a href="#" class="btn-primary" style="font-size:1.1rem;">Add to Chrome Now</a>
-      <p style="margin-top:1rem;color:#555;">Start free and unlock Pro power whenever you need it.</p>
+      <p style="margin-top:1rem;color:#555;">Join today and be first to ride the 100x wave.</p>
     </section>
   </main>
   <footer>
